# mumo_fastapi_project

./: .env.example  .gitignore  README.md  pyproject.toml
.trae/rules/: project_rules.md
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: __init__.py  items.py  ws.py
app/core/: config.py  logger.py  security.py  session.py
app/crud/: __init__.py  item.py
app/models/: item.py
app/schemas/: item.py
app/services/: item.py
docs/: optimization_suggestions.md
tests/: __init__.py
